--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -14,6 +14,7 @@
 <body>
    <div  class="main-content">
 {{>header}}
+<p>This site was created by Xhoi Muca.It uses data from mapbox.com and api.weatherstack.com!</p>
    <img class="portrait" src="/img/robot.png">
    </div>
     
